--- a/resume.css
+++ b/resume.css
@@ -25,7 +25,7 @@ nav li{display:inline-block;}
 nav a{text-decoration:none;
 padding-left:2em;}
 
-nav a:link{color:#FFFFFF;}
+nav a:link{color:#000080;}
 nav a:visited{color:#052c8e;}
 nav a:hover{color:#9eb6f4;}
 
